# backend-pregnancy-care

./: .gitignore  .replit  .slugignore  main.py  model_a.joblib  pyproject.toml  requirements.txt  scaler_model_a.joblib  scaler_model_b.joblib  test_alert.py
test_examples/: high_risk.json  low_risk.json  medium_risk.json
