[tool.poetry]
name = "carebloom-api"
version = "1.0.0"
description = "CareBloom - AI-Powered Pregnancy Risk Assessment API"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
xgboost = "^2.0.2"
twilio = "^8.10.3"
python-dotenv = "^1.0.0"
groq = "^0.4.1"
pydantic = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
